main.css
body {
  background-color: #F4F5F6
}

li {
  list-style: none;
}
a {
  text-decoration: none !important;
  cursor: pointer;
  color:inherit;
}
/* #####  NAV BAR   ##### */
.white-nav {
  display:none
}
.btn {
  width: auto;
  height: 34px;
  padding: 10px 10px 10px 12px;
  text-transform: uppercase;
  font-size: 14px;
  line-height: 14px;
  font-weight: 700;
  color: #fff;
  background-color: #f72210;
  border-radius: 0;
  border: 0;
  font-size: 18px;
  display: flex;
  align-items: center;
}

.btn:hover {
  color: rgb(235, 225, 225);
  text-decoration: none;
}
nav {
  min-width: 100%;
  margin: auto;
  background-color: white;
  min-width: 992px;
  max-width: 1310px;
}
/* WIDE RED NAVBAR*/
header {
  position: relative;
  height: 97px;
  background-color: #f72210;
  z-index: 9999;
  width: 100%;
  
}

header .logo a svg {
  fill: #fff;
  height: 55px;
}

header .header-right a.lk-3 {
  color: #f72210;
  background-color: #fff;
  width: 118px;
  height: 25px;
  margin-top: 2px;
}

/* WIDE RED NAVBAR*/

.menu_bar {
  margin-right: 10px;
}
.lk-2 span{
  
  position: relative;
  font: bold 17px/17px "Roboto Condensed",sans-serif;
  text-transform: uppercase;
  display: inline-block;
  font-weight: 600;
  padding: 6px 3px;
  margin-top: -4px;
  
}
.lk-3 span{
  
  position: relative;
  left: -4px;
  top: 1px;
  font: bold 17px/17px "Roboto Condensed",sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0px;
  display: inline-block;
  padding: 6px 3px;
  
}
.lk-3 svg {
  height: 45px;
  width: 45px;
  fill: #f72210;
  margin-left: 5px;
}

.redbar {
  justify-content: space-around;
}

.principal {
  display: none;
}

.subs {
  display: flex;
  width: 100%;
  align-content: space-between
}
.redbar1 {
  display: flex;
  overflow: hidden;
  height: 50px;
  width: 100%;
  background-color: #f72210;
  z-index: 100;
  position: fixed;
  top:0;
  left:0;
}

.logo1 {
  height: 18px;
  margin-top: 0px;
  left: -2px;
}

.logo1 a svg {
  fill: #fff;
  height: 100%; }

.sign-sub1 {
  flex-direction: row-reverse;
  top: 5px;
  right: 22px;
}

.lk-31 span{
  position: relative;
  font: 17px/17px "Roboto Condensed",sans-serif;
  font-weight: 600;
  text-transform: uppercase;
  letter-spacing: 0px;
  display: inline-block;
  
  
}

a.lk-31 {
  color: #f72210;
  background-color: #fff;
  width: 119px;
  height: 25px;
  margin-top: 2px;
}

.lk-31 svg {
  height: 5vh;
  margin-left: 12px;
  fill: #f72210;
}
.lk-21 span{

  position: relative;
  font: bold 17px/17px "Roboto Condensed",sans-serif;
  text-transform: uppercase;
  display: inline-block;
  font-weight: 600;
  padding: 6px 3px;
  margin-top: -4px;
  
}

.menu_bar1 {
  display: block;
  position: absolute;
  right: 18px;
  top: 3px;
  height: 50px;
  width: 40px;
  padding: 0;
  z-index: 205;

}
.menu_bar1 i {
  margin-top: 5px;
  padding-left: 2vh;
  margin-right: 2vh;
  font-size: 2.5rem;
  color: rgba(255, 255, 255,.5)
}
.card {
  border: 0px;
}

/* #####  NAV BAR   ##### */

/* #####   COVER    ##### */
@media (min-width: 992px) {
  .cover {
    display: flex;
  }
  .redbar1 {
    display: none;
    overflow: hidden;
    height: 50px;
    width: 100%;
    background-color: #f72210;
    z-index: 100;
    position: fixed;
    top:0;
    left:0;
  }
  .redbar1.scrolled {
    display: flex;
    transition: 0.2s;
  }
  .principal {
    display: flex;
  }
  .white-nav {
    display: block;
    position: -webkit-relative;
    position: relative;
    background-color: rgb(255, 255, 255);
    border-bottom: 2px solid #edf0f0;
  }
  .angle {
    position: absolute;
    top: 0;
    right: 0;
    height: 13px;
    width: 78px;
    background-color: #f72210;
    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 15% 100%);
    clip-path: polygon(0 0, 100% 0, 100% 100%, 15% 100%);
  }
  header .date {
    display: block;
    font-weight: normal;
    line-height: 34px;
    padding-top: 55px;
    max-width: 550px;
    color: white;
    font: normal 15px/15px "Roboto Condensed",sans-serif;
    margin-bottom: 14px;
    font-weight: 0;
    padding-right: 10.3%;
    left: 15px;    
  }
  .sign-sub {
    position: relative;
    top: -2vh;
    right: -70px;   
  }

  .white-nav form {
    position: absolute;
    top: 13px;
    width: 100%;
  }
  .white-nav form input {
    position: absolute;
    right: 85px;
    padding: 0;
    border: none;
    width: 70px;
    background-color: white;
    -webkit-transition: all 0.3s;
    transition: all 0.3s;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 16px;
    padding: 2px 0;
  }
  .white-nav ul {
    width: 100%;
    padding: 0;
    padding-right: 160px;
    margin: 0;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: -ms-grid;
    display: grid;
    grid-template-columns: repeat(10, auto);
  }
  .white-nav ul :nth-child(1) {
    border: none;
  }
  .white-nav ul li {
    font: bold 17px/17px "Roboto Condensed",sans-serif;
    font-size: 19px;
    font-weight: 650;
    line-height: 24px;
    margin-bottom: 15px;
    margin-top:  15px;
    border-left: 1px solid #d9d9d9;
  }
  .white-nav ul li a {
    color: black;
    padding: 0;
    position: relative;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
  }
  .white-nav ul li a:hover {
    text-decoration: none;
    color: #F72210;
  }
  .white-nav form label img {
    position: absolute;
    right: 79px;
    top: -2px;
    width: 20px;
    height: 20px;
  }
  .white-nav form label img {
    position: absolute;
    right: 79px;
    top: -2px;
    width: 20px;
    height: 20px;
  }

  .c_container {
    max-width: 1310px;
    margin-right: auto;
    margin-left: auto;
    background-color: white;
  }
  .card {
    border: none;
  }
  .first_row, .center_row, .last_row {
    justify-content: flex-start;
    align-content: flex-start
  }
  .card-body h3 {
    font-family: bold "Roboto Condensed",sans-serif;
    font-size: 22px !important;
    line-height: 24px !important;
    font-weight: bold;
    -webkit-font-smoothing: antialiased;
    color: 000000; 
  }
  .card-body p {
    font-family: Arial,Helvetica,sans-serif;
    font-size: 15px;
    line-height: 20px;
    color: #333;
    -webkit-font-smoothing: antialiased;
  }
  .title {
    margin-top: 20px;
    padding-bottom: 15px;
  }
  .title span {
    
    font: bold 16px/16px "Roboto Condensed",sans-serif;
    text-transform: uppercase;
    color: rgb(112, 111, 111);
  }
        /* FIRST ROW*/
  .first_row {
    padding-left: 48px;
    max-width: 400px;
  }
        /* CENTER ROW */
  .center_row {
    max-width: 565px;
    min-width: 428px;
    padding-left: 50px;
    margin-right: 3.5vh;
      
  }
  .center_row img {
  width: 100%;  
  }
  .wrap {
    position: relative;
  }
  .category {
    font: bold 17px/17px "Roboto Condensed",sans-serif;
    text-transform: uppercase;
    font-weight: 700;
    position: absolute;
    bottom: 0;
    left: 0;
    color: #f72210;
    padding: 8px 15px 9px;
    background-color: rgba(255,255,255,.8);
    z-index: 1;
  }
  .c_card {
    
  }
        /* last ROW */
  .last_row {
    padding-right : 2vh;
    max-width: 86vh;;
  }
  .last_row li {
    border-bottom: 2px solid #d4d4d4 !important;
  }
  .last_row li span:hover {
    color: rgb(247,34,16);
    cursor: pointer;
  }
  .media-body p {
    font: bold 21px/21px "Roboto Condensed",sans-serif;
    text-transform: uppercase;
    font-weight: 800;
    font-size: .9rem;
    color: rgb(85,85,85);
    margin-top: 6px;
  }
  .media-body {
    padding-bottom: 13px;
    padding-top: 13px;
  }
  .media-body span{
    font: bold 17px/21px "Roboto Condensed",sans-serif;
  }
}

